force-app/main/default/objects/hud_Address__c.object
<CustomObject>
    <description>Address object aligned with SF Harvard University Data Architecture.
This differs from HEDA in that it is many to one off of Contact, while HEDA is many to one off of Account.
HUDA strives to represent the relationships as they exist in the systems of record</description>
    <label>hud_Address</label>
    <nameField>
        <displayFormat>HAD-{00000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>hud_Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ADDR_CATEGORY_CD__c</fullName>
        <label>ADDR_CATEGORY_CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_CITY__c</fullName>
        <label>ADDR_CITY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_ID__c</fullName>
        <label>ADDR_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_ISO_COUNTRY_CD__c</fullName>
        <label>ADDR_ISO_COUNTRY_CD</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_LINE1__c</fullName>
        <label>ADDR_LINE1</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_LINE2__c</fullName>
        <label>ADDR_LINE2</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_LINE3__c</fullName>
        <label>ADDR_LINE3</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_MAIL_REALM_CD__c</fullName>
        <label>ADDR_MAIL_REALM_CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_POSTAL_CD__c</fullName>
        <label>ADDR_POSTAL_CD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_PROVINCE__c</fullName>
        <label>ADDR_PROVINCE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_PS_LOCATION_CD__c</fullName>
        <label>ADDR_PS_LOCATION_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_SOURCE__c</fullName>
        <label>ADDR_SOURCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_STATE__c</fullName>
        <label>ADDR_STATE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>hud_Addresses</relationshipLabel>
        <relationshipName>hud_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CONTACT_ADDRESS_KEY__c</fullName>
        <externalId>true</externalId>
        <label>CONTACT_ADDRESS_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFFDT__c</fullName>
        <label>EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFF_STATUS__c</fullName>
        <label>EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <label>INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIVACY_VALUE__c</fullName>
        <label>PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>UNIV_ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DT__c</fullName>
        <label>UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Address_Contact__c</columns>
        <columns>UNIV_ID__c</columns>
        <columns>ADDR_CATEGORY_CD__c</columns>
        <columns>ADDR_SOURCE__c</columns>
        <columns>ADDR_LINE1__c</columns>
        <columns>ADDR_LINE2__c</columns>
        <columns>ADDR_LINE3__c</columns>
        <columns>ADDR_CITY__c</columns>
        <columns>ADDR_STATE__c</columns>
        <columns>ADDR_PROVINCE__c</columns>
        <columns>ADDR_POSTAL_CD__c</columns>
        <columns>ADDR_ISO_COUNTRY_CD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>