force-app/main/default/objects/hud_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Address_Contact__c</columns>
    <columns>UNIV_ID__c</columns>
    <columns>ADDR_CATEGORY_CD__c</columns>
    <columns>ADDR_SOURCE__c</columns>
    <columns>ADDR_LINE1__c</columns>
    <columns>ADDR_LINE2__c</columns>
    <columns>ADDR_LINE3__c</columns>
    <columns>ADDR_CITY__c</columns>
    <columns>ADDR_STATE__c</columns>
    <columns>ADDR_PROVINCE__c</columns>
    <columns>ADDR_POSTAL_CD__c</columns>
    <columns>ADDR_ISO_COUNTRY_CD__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>